<resources>
    <string name="app_name">TV教育</string>
    <string name="text">1.文字</string>
    <string name="watch_history">观看历史</string>
    <string name="ranking_list">排行榜</string>
    <string name="children_education_graphics">儿童教育识图形</string>
    <string name="children_education_games">儿童教育游戏</string>
    <string name="education_for_everyone">教育人人通</string>
    <string name="netease_open_class">网易公开课</string>
    <string name="home_page">首页</string>
    <string name="boutique_recommend">精品推荐</string>
    <string name="infant_enlightenment">幼儿启蒙</string>
    <string name="primary_and_secondary_schools">中小学</string>
    <string name="foreign_study">外国留学</string>
    <string name="open_class">公开课</string>
    <string name="expert_lecture">专家讲座</string>
    <string name="outdoor_activities">户外活动</string>
    <string name="free_tutorial">免费教程</string>
    <string name="edication_video">教育视频</string>
    <string name="bestv">百事通</string>
    <string name="aitewei">艾特维</string>
    <string name="xdf">新东方</string>
    <string name="primary_school">小学</string>
    <string name="junior_middle_school">初中</string>
    <string name="high_school">高中</string>
    <string name="foreign_language_study">外语留学</string>
    <string name="equivalency_exam">学历考试</string>
    <string name="one_grade">一年级</string>
    <string name="two_grade">二年级</string>
    <string name="three_grade">三年级</string>
    <string name="four_grade">四年级</string>
    <string name="five_grade">五年级</string>
    <string name="six_grade">六年级</string>
    <string name="childeren_education_maths">儿童教育数学</string>
    <string name="recently">最近</string>
    <string name="look_to">观看至</string>
    <string name="today">今天</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
</resources>
