<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@drawable/layout_background">
    <RelativeLayout
        android:id="@+id/watchhistory_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="20dp">

        <ImageView
            android:id="@+id/watchhistory_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/watchhistory_back"
            android:text="@string/watch_history"
            android:textColor="@color/color_text_white9"
            android:textSize="30sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/watchhistory_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_below="@+id/watchhistory_title1">
        <TextView
            android:id="@+id/watchhistory_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_white10"
            android:textSize="30sp"
            android:text="@string/today"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:layout_toRightOf="@+id/watchhistory_today"
            android:background="@color/color_background_wathet" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/watchhistory_title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="20dp"
        android:layout_below="@+id/watchhistory_title2">
        <com.open.androidtvwidget.view.GridViewTV
            android:padding ="20dp"
            android:id="@+id/watchhistory_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_centerInParent="true">
        </com.open.androidtvwidget.view.GridViewTV>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/watchhistory_title4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_below="@+id/watchhistory_title3">
        <TextView
            android:id="@+id/watchhistory_recently"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_white10"
            android:textSize="30sp"
            android:text="@string/recently"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:layout_toRightOf="@+id/watchhistory_recently"
            android:background="@color/color_background_wathet" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/watchhistory_title5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="20dp"
        android:layout_below="@+id/watchhistory_title4">
        <com.open.androidtvwidget.view.GridViewTV
            android:padding ="20dp"
            android:id="@+id/watchhistory_gridview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_centerInParent="true">
        </com.open.androidtvwidget.view.GridViewTV>
    </RelativeLayout>

    <com.open.androidtvwidget.view.MainUpView
        android:id = "@+id/watch_history_mainUpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>