<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.vunke.education.view.KuangRelativeLayout
        android:id="@+id/main_relative_watch_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="209dp"
            android:layout_height="150dp"
            android:background="@color/color_brown">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:duplicateParentState="true"
                android:scaleType="fitXY"
                android:src="@drawable/watch_history" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:text="@string/watch_history"
                android:textColor="@color/color_text_white2"
                android:textSize="24sp" />
        </RelativeLayout>
    </com.vunke.education.view.KuangRelativeLayout>

    <com.vunke.education.view.KuangRelativeLayout
        android:id="@+id/main_relative_ranking_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/main_relative_watch_history">

        <RelativeLayout
            android:layout_width="209dp"
            android:layout_height="150dp"
            android:background="@color/color_turquoise">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:duplicateParentState="true"
                android:scaleType="fitXY"
                android:src="@drawable/ranking_list" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:text="@string/ranking_list"
                android:textColor="@color/color_text_white2"
                android:textSize="24sp" />
        </RelativeLayout>
    </com.vunke.education.view.KuangRelativeLayout>

    <RelativeLayout
        android:layout_width="234dp"
        android:layout_height="150dp"
        android:id="@+id/main_small_relative1"
        android:layout_marginLeft="15dp"
        android:focusable="false"
        android:gravity="center_vertical"
        android:layout_toRightOf="@+id/main_relative_ranking_list">
        <com.vunke.education.view.KuangRelativeLayout
            android:id="@+id/main_ralative_small_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_centerInParent="true"
                android:src="@drawable/main_small_view1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/children_education_graphics"
                android:textColor="@color/color_text_white2"
                android:singleLine="true"
                android:textSize="18sp"
                />
        </com.vunke.education.view.KuangRelativeLayout>



        <com.vunke.education.view.KuangRelativeLayout
            android:id="@+id/main_ralative_small_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_ralative_small_view1"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_centerInParent="true"
                android:src="@drawable/main_small_view2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children_education_games"
                android:textColor="@color/color_text_white2"
                android:layout_alignParentBottom="true"
                android:singleLine="true"
                android:textSize="18sp"/>
        </com.vunke.education.view.KuangRelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="234dp"
        android:layout_height="150dp"
        android:id="@+id/main_small_relative2"
        android:layout_marginLeft="15dp"
        android:focusable="false"
        android:gravity="center_vertical"
        android:layout_toRightOf="@+id/main_small_relative1">
        <com.vunke.education.view.KuangRelativeLayout
            android:id="@+id/main_ralative_small_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_centerInParent="true"
                android:src="@drawable/main_small_view3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/children_education_graphics"
                android:textColor="@color/color_text_white2"
                android:singleLine="true"
                android:textSize="18sp"
                />
        </com.vunke.education.view.KuangRelativeLayout>



        <com.vunke.education.view.KuangRelativeLayout
            android:id="@+id/main_ralative_small_view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_ralative_small_view3"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_centerInParent="true"
                android:src="@drawable/main_small_view4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children_education_games"
                android:textColor="@color/color_text_white2"
                android:layout_alignParentBottom="true"
                android:singleLine="true"
                android:textSize="18sp"/>
        </com.vunke.education.view.KuangRelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/main_small_relative3"
        android:layout_toRightOf="@id/main_small_relative2">
        <com.vunke.education.view.KuangRelativeLayout
            android:layout_width="234dp"
            android:layout_height="150dp"
            android:id="@+id/main_ordering">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/ordering"/>
        </com.vunke.education.view.KuangRelativeLayout>
    </RelativeLayout>
</RelativeLayout>