<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/watchhistory_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/watchhistory_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/watchhistory_back"
            android:text="@string/watch_history"
            android:textColor="@color/color_text_white9"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/watchhistory_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/watchhistory_title1"
        android:layout_marginLeft="50dp">

        <RelativeLayout
            android:id="@+id/watchhistory_rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/watchhistory_recently"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recently"
                android:textColor="@color/color_text_white10"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:layout_toRightOf="@+id/watchhistory_recently"
                android:background="@color/color_background_wathet" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/watchhistory_recentlylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/watchhistory_rl1"
            android:layout_marginLeft="30dp"
            android:padding="10dp">

            <HorizontalScrollView
                android:id="@+id/wy_horizontalScrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_recentlylist_rl1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp">

                        <ImageView
                            android:id="@+id/wy_recently_videoimg1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_recently_videotext1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_recently_videoimg1"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />
                    </com.vunke.education.view.KuangRelativeLayout2>

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_recentlylist_rl2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_toRightOf="@+id/wh_recentlylist_rl1">

                        <ImageView
                            android:id="@+id/wy_recently_videoimg2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_recently_videotext2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_recently_videoimg2"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />
                    </com.vunke.education.view.KuangRelativeLayout2>

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_recentlylist_rl3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_toRightOf="@+id/wh_recentlylist_rl2">

                        <ImageView
                            android:id="@+id/wy_recently_videoimg3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_recently_videotext3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_recently_videoimg3"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />
                    </com.vunke.education.view.KuangRelativeLayout2>

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_recentlylist_rl4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_toRightOf="@+id/wh_recentlylist_rl3">

                        <ImageView
                            android:id="@+id/wy_recently_videoimg4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_recently_videotext4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_recently_videoimg4"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />
                    </com.vunke.education.view.KuangRelativeLayout2>
                </RelativeLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/watchhistory_title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/watchhistory_title2"
        android:layout_marginLeft="50dp">

        <RelativeLayout
            android:id="@+id/watchhistory_rl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/watchhistory_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="@color/color_text_white10"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:layout_toRightOf="@+id/watchhistory_today"
                android:background="@color/color_background_wathet" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/watchhistory_todaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/watchhistory_rl2"
            android:layout_marginLeft="30dp"
            android:padding="10dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_todaylist_rl1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp">

                        <ImageView
                            android:id="@+id/wy_today_videoimg1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_today_videotext1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_today_videoimg1"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />
                    </com.vunke.education.view.KuangRelativeLayout2>

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_todaylist_rl2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_toRightOf="@id/wh_todaylist_rl1">

                        <ImageView
                            android:id="@+id/wy_today_videoimg2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_today_videotext2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_today_videoimg2"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />


                    </com.vunke.education.view.KuangRelativeLayout2>

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_todaylist_rl3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_toRightOf="@+id/wh_todaylist_rl2">

                        <ImageView
                            android:id="@+id/wy_today_videoimg3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_today_videotext3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_today_videoimg3"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />

                    </com.vunke.education.view.KuangRelativeLayout2>

                    <com.vunke.education.view.KuangRelativeLayout2
                        android:id="@+id/wh_todaylist_rl4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_toRightOf="@+id/wh_todaylist_rl3">

                        <ImageView
                            android:id="@+id/wy_today_videoimg4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/chanping" />

                        <TextView
                            android:id="@+id/wy_today_videotext4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/wy_today_videoimg4"
                            android:drawableLeft="@drawable/tv"
                            android:text="@string/look_to"
                            android:textColor="@color/color_text_white11"
                            android:textSize="18sp" />

                    </com.vunke.education.view.KuangRelativeLayout2>
                </RelativeLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>